--- a/Client/src/data/appointmentsData.json
+++ b/Client/src/data/appointmentsData.json
@@ -2,19 +2,25 @@
     {
       "id": 1,
       "date": "24",
+      "month":"Sep",
       "name": "Buchan",
-      "status": "Confirmed"
+      "status": "Confirmed",
+      "image":"../../../src/assets/dr.1.png"
     },
     {
       "id": 2,
       "date": "16",
       "name": "Smith",
-      "status": "Pending"
+      "month":"Jan",
+      "status": "Pending",
+       "image":"../../../src/assets/dr.2.png"
     },
     {
       "id": 3,
       "date": "10",
+      "month":"Nov",
       "name": "Jane Doe",
-      "status": "Cancelled"
+      "status": "Cancelled",
+       "image":"../../../src/assets/dr.3.png"
     }
   ]
