--- a/Client/package.json
+++ b/Client/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "emoji-picker-react": "^4.12.0",
     "framer-motion": "^11.8.0",
     "lucide-react": "^0.445.0",
     "react": "^18.3.1",
+    "react-calendar": "^5.1.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
     "react-icons": "^5.3.0",
